tests/baselines/reference/objectLiteralReferencingInternalProperties.errors.txt
objectLiteralReferencingInternalProperties.ts(1,21): error TS2304: Cannot find name 'b'.


==== objectLiteralReferencingInternalProperties.ts (1 errors) ====
    var a = { b: 10, c: b }; // Should give error for attempting to reference b.
                        ~
!!! error TS2304: Cannot find name 'b'.